feat: Support providing compiler arguments (#80)
Signed-off-by: Sheng Chen <sheche@microsoft.com>